# weather

./: .gitignore  404.html  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: publish-docs.yml
app/api/: weather.py  weather_api.py
app/core/: async_cache.py  config.py
app/database/: create_graphics.sql  create_location_alias.sql  create_location_metadata.sql  db.py
app/frontend/: forecast.py
app/location/: add_location.py  details.py  gen_image.py  llm.py  llm2.py  prompt_gen_image.llm  prompt_gen_image_2.llm  prompt_get_coordinates.llm  prompt_get_landmarks.llm
app/pages/: base.html  page_weather.html
app/schemas/: weather_schema.py
app/static/css/: daisyui.css
app/static/js/: alpine.min.js  htmx.min.js  tailwind.min.js
app/utils/: add_location.py
app/weather/: weather.py
docs/: index.md  utils.md  weather.md  weather_schema.md
search/: search_index.json
utils/: index.html
weather/: index.html
weather_schema/: index.html
